--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOVANNAPHUM STORE | Modern Online Store</title>
-    <link rel="stylesheet" href="./css/tmry.css">
+    <link rel="stylesheet" href="tmry.css">
     <style>
 
     </style>
@@ -232,4 +232,5 @@
         });
     </script>
 </body>
+
 </html>
